--- a/views/index.pug
+++ b/views/index.pug
@@ -1,2 +1,18 @@
 include ../partials/header.pug
 h1 #{title}
+h2 Créer un événement
+form(method="post" action="/party")
+
+  div
+    label(for="name") Nom de l'événement
+    input(name="name" id="name" required minlength="3" placeholder="Nouvel an")
+
+  div
+    label(for="author") Auteur
+    input(name="author" id="author" required minlength="3" placeholder="Bastien")
+
+  div
+    label(for="date") Date
+    input(name="date" id="date" type="date"  minlength="3")
+
+  button(type="submit") Créer
