--- a/views/party.pug
+++ b/views/party.pug
@@ -3,3 +3,25 @@ h2= party.name
 h3 Créé par #{party.author}
 label(for="url") Partagez l'événement
 input(id="url" value=`${url}`)
+
+form(method="post" action=`/item/${party._id}`)
+
+  div
+    label(for="name") Nom de l'element
+    input(name="name" id="name" required minlength="3" placeholder="Apporter du coca")
+
+  div
+      label(for="user") Auteur l'element
+      input(name="user" id="user" required minlength="3" placeholder="Rémi")
+
+  button(type="submit") Créer
+
+h2 Liste:
+  ul
+  each item in party.items
+    form(method="post" action=`/party/${party._id}/items/${item._id}`)
+      li id: #{item._id}
+      li nom: #{item.name}
+      li auteur: #{item.user}
+      button(type="submit") Supprimer
+    hr
