--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,11 @@
 @import './vendors/reset.scss';
+@import './config/media.scss';
+@import './blocs/newParty.scss';
 
 form {
-  border: 1px solid blue;
+  // border: 1px solid blue;
 
   div {
-    border: 1px solid red;
+    // border: 1px solid red;
   }
 }
