--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,12 @@
 include ../partials/header.pug
 h1 #{title}
 h2 Créer un événement
-form(method="post" action="/party")
-
-  div
+form(method="post" action="/party").newParty
+  div.newParty__fields
     label(for="name") Nom de l'événement
     input(name="name" id="name" required minlength="3" placeholder="Nouvel an")
-
-  div
-    label(for="author") Auteur
-    input(name="author" id="author" required minlength="3" placeholder="Bastien")
-
-  div
-    label(for="date") Date
-    input(name="date" id="date" type="date"  minlength="3")
-
+    label(for="author" required) Votre pseudo
+    input(name="author" id="author" required minlength="3" placeholder="John")
+    label(for="date") Date de l'événement
+    input(name="date" id="date" type="date")
   button(type="submit") Créer
