--- a/views/party.pug
+++ b/views/party.pug
@@ -1,8 +1,9 @@
 include ../partials/header.pug
 h2= party.name
 h3 Créé par #{party.author}
-label(for="url") Partagez l'événement
-input(id="url" value=`${url}`)
+div
+  label(for="url") Partagez l'événement
+  input(id="url" value=`${url}` data-clipboard=`${url}`)
 
 form(method="post" action=`/item/${party._id}`)
 
